# rust-fit

./: Cargo.toml
codegen/: Cargo.toml
codegen/src/: gen_profile.rs  lib.rs  profile_types.rs
examples/: read-activity.rs
src/: base_type.rs  byte_order.rs  error.rs  file_header.rs  fit_header.rs  fit_record.rs  lib.rs  main.rs  profile_types.rs  protocol.rs  read_ext.rs  reader.rs  record.rs  stream_reader.rs
src/profile/: types.rs
src/protocol/: reader.rs
