[package]
name = "rust-fit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
csv = "1.3.0"
prettyplease = "0.2.15"
proc-macro2 = "1.0.70"
quote = "1.0.33"
serde = { version = "1.0.193", features = ["serde_derive"] }
serde_json = "1.0.108"
syn = "2.0.39"
