[workspace]
members = ["codegen"]

[package]
name = "rust-fit"
version = "0.1.0"
edition = "2021"

[dependencies]
csv = "1.3.0"
heck = "0.4.1"
log = "0.4.20"
num_enum = "0.7.1"
serde = { version = "1.0.193", features = ["serde_derive"] }
serde_json = "1.0.108"
thiserror = "1.0.52"

[dev-dependencies]
env_logger = "0.10.1"
 
